--- a/Newsblast.Web/Views/_ViewImports.cshtml
+++ b/Newsblast.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
+@using Discord
+@using Discord.Rest
 @using Newsblast.Web
 @using Newsblast.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
