--- a/Newsblast.Web/Views/Shared/_Layout.cshtml
+++ b/Newsblast.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Newsblast.Web</title>
+    <title>@ViewData["Title"] - Newsblast</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.css" />
