Started work on Guild/Inspect action.

--- a/Newsblast.Web/Views/Shared/_Layout.cshtml
+++ b/Newsblast.Web/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <a asp-area="" asp-controller="Guild" asp-action="Index" class="nav-link">Servers</a>
                     </li>
                     <li class="nav-item">
-                        <a asp-area="" asp-controller="Source" asp-action="Index" class="nav-link">Sources</a>
+                        <a asp-area="" asp-controller="Source" asp-action="Index" class="nav-link">Feeds</a>
                     </li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
