--- a/Newsblast.Web/Views/Guild/Index.cshtml
+++ b/Newsblast.Web/Views/Guild/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model List<Guild>
 @{
-    ViewData["Title"] = "Servers You Own";
+    ViewData["Title"] = "Servers";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h1>@ViewData["Title"]</h1>
 
 @if (Model.Count <= 0)
 {
-    <p>You do not own any servers.</p>
+    <p>You are not a member of any servers.</p>
 }
 else
 {
