--- a/Newsblast.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Newsblast.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,9 @@
-﻿    @if (User.Identity.IsAuthenticated)
-    {
-        var token = User.Claims.Where(e => e.Type == "urn:discord:token").Single().Value;
+﻿@inject DiscordUserClient discordUserClient
 
-        var discord = new DiscordRestClient();
-        await discord.LoginAsync(TokenType.Bearer, token);
+@if (User.Identity.IsAuthenticated)
+{
+    var client = await discordUserClient.GetRestClientAsync();
+    var user = client.CurrentUser;
 
-        var user = discord.CurrentUser;
-
-        <span class="text-light"><img src="@user.GetAvatarUrl(ImageFormat.Jpeg, 32)" width="30" height="30" class="rounded-circle d-inline-block align-top" alt="@user.Username" /> @user.Username#@user.Discriminator</span>
-    }
+    <span class="text-light"><img src="@user.GetAvatarUrl(ImageFormat.Jpeg, 32)" width="30" height="30" class="rounded-circle d-inline-block align-top" alt="@user.Username" /> @user.Username#@user.Discriminator</span>
+}
