--- a/Newsblast.Web/Views/_ViewImports.cshtml
+++ b/Newsblast.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Discord.Rest
 @using Newsblast.Web
 @using Newsblast.Web.Models
+@using Newsblast.Web.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
