Worked on feed support in web portal.

--- a/Newsblast.Web/Views/Guild/Index.cshtml
+++ b/Newsblast.Web/Views/Guild/Index.cshtml
@@ -11,8 +11,23 @@
 }
 else
 {
-    @foreach (var guild in Model.OrderBy(e => e.Name))
-    {
-        <a asp-area="" asp-controller="Guild" asp-action="Inspect" asp-route-id="@guild.Id"><img src="@guild.IconUrl" alt="@guild.Name" class="rounded-circle" /></a>
-    }
+    <table class="table table-striped">
+        <tbody>
+            @foreach (var guild in Model.OrderBy(e => e.Name))
+            {
+                <tr>
+                    <td scope="row">
+                        <a asp-area="" asp-controller="Guild" asp-action="Inspect" asp-route-id="@guild.Id">
+                            @if (guild.IconUrl != null)
+                            {
+                                <img src="@guild.IconUrl" width="32" height="32" alt="" class="rounded-circle" />
+                            }
+                            @guild.Name
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    
 }
