--- a/Newsblast.Web/Views/_ViewImports.cshtml
+++ b/Newsblast.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Discord
-@using Discord.Rest
+@using Newsblast.Shared.Data.Models
 @using Newsblast.Web
 @using Newsblast.Web.Models
+@using Newsblast.Web.Models.ViewModels
 @using Newsblast.Web.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
