--- a/Newsblast.Web/Views/Guild/Index.cshtml
+++ b/Newsblast.Web/Views/Guild/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-@if (Model.Count <= 0)
+@if (Model == null || Model.Count <= 0)
 {
     <p>You are not a member of any servers.</p>
 }
