--- a/Newsblast.Web/Views/Channel/Subscribe.cshtml
+++ b/Newsblast.Web/Views/Channel/Subscribe.cshtml
@@ -6,6 +6,8 @@
 <h1>@Model.Channel.Guild.Name</h1>
 <h2>Subscribe #@Model.Channel.Name  to Feed</h2>
 
+<p><strong>NOTE: It can take up to 20 minutes for a subscription to go live.</strong></p>
+
 <form method="post">
     <div class="form-group">
         <label asp-for="SourceId"></label>
