Started web portal refinement.

--- a/Newsblast.Web/Views/Guild/Index.cshtml
+++ b/Newsblast.Web/Views/Guild/Index.cshtml
@@ -22,6 +22,10 @@ else
                             {
                                 <img src="@guild.IconUrl" width="32" height="32" alt="" class="rounded-circle" />
                             }
+                            else
+                            {
+                                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAMAAAAoyzS7AAAAA1BMVEVyidp8SJksAAAACklEQVQI12NgAAAAAgAB4iG8MwAAAABJRU5ErkJggg==" width="32" height="32" alt="" class="rounded-circle" />
+                            }
                             @guild.Name
                         </a>
                     </td>
