--- a/Newsblast.Web/wwwroot/css/site.css
+++ b/Newsblast.Web/wwwroot/css/site.css
@@ -1,1 +1,10 @@
-﻿
+body.bg-dark {
+  background-color: #36393e !important; }
+
+body.text-white {
+  color: #fff; }
+  body.text-white hr {
+    border-color: #fff; }
+
+nav.navbar.bg-dark {
+  background-color: #202225 !important; }
