Added logout function to web portal. Added optimizations for server.

--- a/Newsblast.Web/Styles/site.scss
+++ b/Newsblast.Web/Styles/site.scss
@@ -18,10 +18,14 @@ body {
     }
 }
 
-nav {
-    &.navbar {
-        &.bg-dark {
-            background-color: $nav-bg-color !important;
-        }
+.navbar {
+    &.bg-dark {
+        background-color: $nav-bg-color !important;
+    }
+}
+
+.btn {
+    &.btn-link {
+        transition: none;
     }
 }
