--- a/Newsblast.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Newsblast.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,12 +5,13 @@
     var client = await discordUserClient.GetRestClientAsync();
     var user = client.CurrentUser;
 
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <span class="nav-link">Hello, @user.Username#@user.Discriminator!</span>
-        </li>
-        <li class="nav-item">
-            <a href="#" class="nav-link">Logout</a>
-        </li>
-    </ul>
+    <span class="navbar-text">Logged in as: @user.Username#@user.Discriminator</span>
+    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <button type="submit" class="btn btn-link nav-link">Logout</button>
+            </li>
+        </ul>
+    </form>
+
 }
