--- a/Newsblast.Web/wwwroot/css/site.css
+++ b/Newsblast.Web/wwwroot/css/site.css
@@ -6,5 +6,8 @@ body.text-white {
   body.text-white hr {
     border-color: #fff; }
 
-nav.navbar.bg-dark {
+.navbar.bg-dark {
   background-color: #202225 !important; }
+
+.btn.btn-link {
+  transition: none; }
