--- a/Newsblast.Web/Views/Shared/_Layout.cshtml
+++ b/Newsblast.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,9 @@
     </nav>
 
     <div class="container">
+        <div class="py-2"></div>
         @RenderBody()
+        <div class="py-2"></div>
         <hr />
         <footer>
             <p>Powered by Newsblast. <a href="https://github.com/jonathanpotts/Newsblast">View source on GitHub.</a></p>
