--- a/Newsblast.Web/Views/Guild/Index.cshtml
+++ b/Newsblast.Web/Views/Guild/Index.cshtml
@@ -3,7 +3,9 @@
     ViewData["Title"] = "Servers";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<div class="py-2"></div>
 
 @if (Model == null || Model.Count <= 0)
 {
@@ -11,27 +13,19 @@
 }
 else
 {
-    <table class="table table-striped">
+    <table class="table table-striped table-dark table-icons">
         <tbody>
             @foreach (var guild in Model.OrderBy(e => e.Name))
             {
                 <tr>
-                    <td scope="row">
-                        <a asp-area="" asp-controller="Guild" asp-action="Inspect" asp-route-id="@guild.Id">
-                            @if (guild.IconUrl != null)
-                            {
-                                <img src="@guild.IconUrl" width="32" height="32" alt="" class="rounded-circle" />
-                            }
-                            else
-                            {
-                                <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAMAAAAoyzS7AAAAA1BMVEVyidp8SJksAAAACklEQVQI12NgAAAAAgAB4iG8MwAAAABJRU5ErkJggg==" width="32" height="32" alt="" class="rounded-circle" />
-                            }
-                            @guild.Name
-                        </a>
+                    <td>
+                        @Html.Partial("_GuildSmallIconPartial", guild)
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Guild" asp-action="Inspect" asp-route-id="@guild.Id">@guild.Name</a>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
-    
 }
