--- a/Newsblast.Web/Views/Guild/Inspect.cshtml
+++ b/Newsblast.Web/Views/Guild/Inspect.cshtml
@@ -4,28 +4,27 @@
     ViewData["Title"] = Model.Name;
 }
 
-@if (Model.IconUrl != null)
-{
-    <img src="@Model.IconUrl" width="128" height="128" alt="" class="rounded-circle" />
-}
-else
-{
-    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAMAAAAoyzS7AAAAA1BMVEVyidp8SJksAAAACklEQVQI12NgAAAAAgAB4iG8MwAAAABJRU5ErkJggg==" width="128" height="128" alt="" class="rounded-circle" />
-}
+<div class="text-center">
+    @Html.Partial("_GuildLargeIconPartial", Model)
+    <h1>@Model.Name</h1>
+</div>
 
-<h1>@Model.Name</h1>
+<div class="py-2"></div>
 
 @if (Model.IsAdministrator)
 {
     @if (!Model.BotConnected)
     {
-        <p>The Newsblast bot is not connected to @Model.Name. You need to <a asp-area="" asp-controller="Bot" asp-action="Connect" asp-route-guildId="@Model.Id">connect the bot</a> to use Newsblast on @Model.Name.</p>
+        <p class="text-center">The Newsblast bot is not connected to @Model.Name. You need to <a asp-area="" asp-controller="Bot" asp-action="Connect" asp-route-guildId="@Model.Id">connect the bot</a> to use Newsblast on @Model.Name.</p>
     }
     else
     {
-        <p>The Newsblast bot is connected to @Model.Name.</p>
+        <p class="text-center">The Newsblast bot is connected to @Model.Name.</p>
+
+        <div class="py-2"></div>
+
         <h2>Channels</h2>
-        <table class="table table-striped">
+        <table class="table table-striped table-dark">
             <tbody>
                 @foreach (var channel in Model.Channels)
                 {
@@ -39,5 +38,5 @@ else
 }
 else
 {
-    <p>Only server administrators can add or manage the Newsblast bot for their server.</p>
+    <p class="text-center">Only server administrators can add or manage the Newsblast bot for their server.</p>
 }
