--- a/Newsblast.Web/Views/Source/Index.cshtml
+++ b/Newsblast.Web/Views/Source/Index.cshtml
@@ -3,11 +3,17 @@
     ViewData["Title"] = "Feeds";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
+
+<div class="py-2"></div>
+
+<p>Don't see the feed you want? <a asp-action="Add">Add a new feed.</a></p>
+
+<div class="py-2"></div>
 
 @if (Model != null && Model.Count > 0)
 {
-    <table class="table table-striped">
+    <table class="table table-striped table-dark">
         <tbody>
             @foreach (var source in Model.OrderBy(e => e.Name))
             {
@@ -20,5 +26,3 @@
         </tbody>
     </table>
 }
-
-<p>Don't see the feed you want? <a asp-action="Add">Add a new feed.</a></p>
