--- a/Newsblast.Web/wwwroot/css/site.css
+++ b/Newsblast.Web/wwwroot/css/site.css
@@ -2,12 +2,80 @@ body.bg-dark {
   background-color: #36393e !important; }
 
 body.text-white {
-  color: #fff; }
+  color: #fff !important; }
   body.text-white hr {
-    border-color: #fff; }
+    border-color: #484b51 !important; }
+
+a:link, a:hover, a:focus, a:active, a:visited {
+  color: #00a6ff; }
+
+h1 a:link, h1 a:hover, h1 a:focus, h1 a:active, h1 a:visited, h2 a:link, h2 a:hover, h2 a:focus, h2 a:active, h2 a:visited {
+  color: #fff !important; }
+
+table a:link, table a:hover, table a:focus, table a:active, table a:visited {
+  color: #fff !important; }
 
 .navbar.bg-dark {
   background-color: #202225 !important; }
 
+.btn.btn-primary {
+  background-color: #7289da !important;
+  border-color: #7289da !important;
+  box-shadow: none !important;
+  outline: none !important; }
+  .btn.btn-primary:hover, .btn.btn-primary:focus {
+    background-color: #677bc4 !important;
+    border-color: #677bc4 !important; }
+  .btn.btn-primary:active {
+    background-color: #5b6eae !important;
+    border-color: #5b6eae !important; }
+
 .btn.btn-link {
-  transition: none; }
+  transition: none !important; }
+
+.form-control {
+  color: #fff !important;
+  background-color: #484b51 !important;
+  border-color: #484b51 !important;
+  box-shadow: none !important;
+  outline: none !important; }
+  .form-control::placeholder {
+    color: #7e8084 !important; }
+  .form-control::-webkit-input-placeholder {
+    color: #7e8084 !important; }
+  .form-control:-ms-input-placeholder {
+    color: #7e8084 !important; }
+  .form-control:active, .form-control:focus {
+    background-color: #484b51 !important;
+    border-color: #5b6eae !important; }
+
+.text-danger {
+  color: #f04542 !important; }
+
+.table-icons {
+  line-height: 32px; }
+
+.table-dark {
+  background-color: #202225 !important; }
+  .table-dark td {
+    border-color: #2f3237 !important; }
+  .table-dark.table-striped tbody tr:nth-of-type(2n+1) {
+    background-color: #32363b !important; }
+
+.small-icon {
+  background-color: #7289da;
+  width: 32px;
+  height: 32px; }
+
+.large-icon {
+  background-color: #7289da;
+  width: 96px;
+  height: 96px; }
+
+.discord-embed {
+  background-color: #32363b;
+  border: 1px solid #2f3237; }
+  .discord-embed .discord-embed-author {
+    color: #fff; }
+    .discord-embed .discord-embed-author a:link, .discord-embed .discord-embed-author a:hover, .discord-embed .discord-embed-author a:focus, .discord-embed .discord-embed-author a:active, .discord-embed .discord-embed-author a:visited {
+      color: #fff; }
