Added tracking of who added a source. Updates to the web portal.

--- a/Newsblast.Web/Styles/site.scss
+++ b/Newsblast.Web/Styles/site.scss
@@ -85,11 +85,11 @@ table {
     box-shadow: none !important;
     outline: none !important;
 
-    &::placeholder {
+    &::-webkit-input-placeholder {
         color: $placeholder-color !important;
     }
 
-    &::-webkit-input-placeholder {
+    &::-moz-placeholder {
         color: $placeholder-color !important;
     }
 
