--- a/Newsblast.Web/Views/Channel/Subscribe.cshtml
+++ b/Newsblast.Web/Views/Channel/Subscribe.cshtml
@@ -23,3 +23,8 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+@section Scripts
+{
+    @Html.Partial("_ValidationScriptsPartial")
+}
