--- a/Newsblast.Web/Views/Shared/InternalServerError.cshtml
+++ b/Newsblast.Web/Views/Shared/InternalServerError.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Internal Server Error";
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
