--- a/Newsblast.Web/Views/Source/Inspect.cshtml
+++ b/Newsblast.Web/Views/Source/Inspect.cshtml
@@ -8,8 +8,8 @@
 <div class="py-2"></div>
 
 <div class="text-center">
-    <p>Website: <a href="@Model.Url">@Model.Url</a></p>
-    <p>RSS Feed: <a href="@Model.FeedUrl">@Model.FeedUrl</a></p>
+    <p><a href="@Model.Url">Website</a></p>
+    <p><a href="@Model.FeedUrl">RSS Feed</a></p>
 </div>
 
 <div class="py-2"></div>
