--- a/Newsblast.Web/Views/Shared/Forbidden.cshtml
+++ b/Newsblast.Web/Views/Shared/Forbidden.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Forbidden";
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
-<p class="text-danger">An error occurred while processing your request.</p>
+<p class="text-danger">You must login to access the requested resource.</p>
 
 @if (Model.ShowRequestId)
 {
