--- a/Newsblast.Web/Views/Shared/Unauthorized.cshtml
+++ b/Newsblast.Web/Views/Shared/Unauthorized.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Unauthorized";
 }
 
 <h1 class="text-danger">@ViewData["Title"]</h1>
-<p class="text-danger">An error occurred while processing your request.</p>
+<p class="text-danger">You do not have access to the requested resource.</p>
 
 @if (Model.ShowRequestId)
 {
