--- a/Newsblast.Web/Views/Source/Inspect.cshtml
+++ b/Newsblast.Web/Views/Source/Inspect.cshtml
@@ -1,4 +1,5 @@
-﻿@model Source
+﻿@inject DiscordUserClient UserClient
+@model Source
 @{
     ViewData["Title"] = Model.Name;
 }
@@ -10,6 +11,11 @@
 <div class="text-center">
     <p><a href="@Model.Url">Website</a></p>
     <p><a href="@Model.FeedUrl">RSS Feed</a></p>
+
+    @if (await UserClient.IsAdministratorAsync())
+    {
+        <p><a asp-action="Delete" asp-route-id="@Model.Id" class="text-danger">Delete</a></p>
+    }
 </div>
 
 <div class="py-2"></div>
