--- a/Newsblast.Web/Views/Shared/_Layout.cshtml
+++ b/Newsblast.Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
         <div class="py-2"></div>
         <hr />
         <footer>
-            <p>Powered by Newsblast. <a href="https://github.com/jonathanpotts/Newsblast">View source on GitHub.</a></p>
+            <p>Powered by Newsblast. <a href="https://github.com/jonathanpotts/Newsblast">View source on GitHub.</a> <a href="https://github.com/jonathanpotts/Newsblast/issues/new">Report an issue.</a></p>
         </footer>
     </div>
 
