--- a/Newsblast.Web/Views/Channel/Subscribe.cshtml
+++ b/Newsblast.Web/Views/Channel/Subscribe.cshtml
@@ -11,6 +11,8 @@
 
 <div class="py-2"></div>
 
+<p class="text-center">Don't see the feed you want? <a asp-area="" asp-controller="Source" asp-action="Add">Add a new feed.</a></p>
+
 <p class="text-center"><strong>NOTE: It can take up to @Constants.TimeBetweenUpdatesInMinutes @(Constants.TimeBetweenUpdatesInMinutes == 1 ? "minute" : "minutes") for a subscription to go live.</strong></p>
 
 <div class="py-2"></div>
