--- a/Newsblast.Web/Views/Guild/Inspect.cshtml
+++ b/Newsblast.Web/Views/Guild/Inspect.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    @Html.Partial("_GuildLargeIconPartial", Model)
+    @Html.PartialAsync("_GuildLargeIconPartial", Model)
     <h1>@Model.Name</h1>
 </div>
 
