--- a/Newsblast.Web/Views/Channel/Subscribe.cshtml
+++ b/Newsblast.Web/Views/Channel/Subscribe.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    @Html.Partial("_GuildLargeIconPartial", Model.Channel.Guild)
+    @Html.PartialAsync("_GuildLargeIconPartial", Model.Channel.Guild)
     <h1><a asp-area="" asp-controller="Guild" asp-action="Inspect" asp-route-id="@Model.Channel.Guild.Id">@Model.Channel.Guild.Name</a></h1>
     <h2>Subscribe <a asp-action="Index" asp-route-id="@Model.Channel.Id">#@Model.Channel.Name</a> to Feed</h2>
 </div>
@@ -28,5 +28,5 @@
 
 @section Scripts
 {
-    @Html.Partial("_ValidationScriptsPartial")
+    @Html.PartialAsync("_ValidationScriptsPartial")
 }
