--- a/Newsblast.Web/Views/Source/Inspect.cshtml
+++ b/Newsblast.Web/Views/Source/Inspect.cshtml
@@ -24,5 +24,5 @@
 {
     <h2>Latest Article</h2>
 
-    @Html.Partial("_EmbedPartial", Model.Embeds.OrderByDescending(e => e.Date).First())
+    @Html.PartialAsync("_EmbedPartial", Model.Embeds.OrderByDescending(e => e.Date).First())
 }
